:fire: 去除不必要的依赖