@@ -24,7 +24,7 @@ import org.junit.jupiter.api.Test;
 import java.sql.SQLException;
 import java.util.List;
 
-import cn.taketoday.util.StringUtils;
+import cn.taketoday.polaris.util.StringUtils;
 
 /**
  * @author aldenquimby@gmail.com
@@ -43,7 +43,7 @@ public class UnderscoreToCamelCasePerformanceTests {
     tests.printResults("");
   }
 
-  private List<String> toConvert = ImmutableList.of("my_string_variable", "string", "my_really_long_string_variable_name",
+  private List<String> toConvert = List.of("my_string_variable", "string", "my_really_long_string_variable_name",
           "my_string2_with_numbers_4", "my_string_with_MixED_CaSe",
           "", " ", "\t", "\n\n");
 
